--- a/src/components/FeedHeader.css
+++ b/src/components/FeedHeader.css
@@ -1,4 +1,9 @@
 .feedHeader{
-    margin-top: 25px;
-    padding: 0 1rem;  
+    /* margin-top: 25px; */
+    padding: 1.5rem 1rem 0.8rem 1rem;  
+    border-bottom: 1px solid #111827;
+}
+
+.feedHeader > h5{
+    letter-spacing: 0.8px;
 }
