--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -28,8 +28,8 @@
 }
 
 .sideBar__postButton{
-  background-color: #FFD679;
-  border: 1px solid #FFD679;
+  background-color: #FFCB12;
+  border: 1px solid #FFCB12;
   padding: 5px;
   border-radius: 100px;
   color: white;
