--- a/src/components/FeedHeader.css
+++ b/src/components/FeedHeader.css
@@ -1,9 +1,16 @@
 .feedHeader{
     /* margin-top: 25px; */
-    padding: 1.5rem 1rem 0.8rem 1rem;  
+    padding: 1.5rem 1rem 0.6rem 1rem;  
     border-bottom: 1px solid #111827;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
 
-.feedHeader > h5{
-    letter-spacing: 0.8px;
+.feedHeader > p{
+    /* letter-spacing: 0.8px; */
+    font-size: small;
+    color: #dfe2e8;
 }
